[package]
name = "vortilo"
version = "0.1.0"
authors = ["Lucas Rooyakkers <lucas.rooyakkers@protonmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
logos = "0.12"
serde_json = "1.0"
wasm-bindgen = "0.2"
yew = "0.18"
